# job-shell

./: .gitignore  Cargo.toml  README.md  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  code-refactor-.md  company-request.md  feature_request.md
.github/workflows/: build.yml
scripts/: create_scraper  create_scraper.mjs
src/: args.rs  company_options.rs  cron.rs  discord.rs  error.rs  handlers.rs  main.rs  reports.rs  utils.rs
src/handlers/: handlers.rs  mod.rs  scrape_options.rs
src/models/: ai.rs  custom_error.rs  data.rs  gemini.rs  scraper.rs  snapshots.rs
src/modes/: cli.rs  discord.rs
src/scrapers/: default.rs  mod.rs
src/scrapers/airbnb/: scraper.rs
src/scrapers/anduril/: scraper.rs
src/scrapers/anduril/scripts/: get_anduril_jobs.js
src/scrapers/atlassian/: scraper.rs
src/scrapers/blizzard/: scraper.rs
src/scrapers/chase/: scraper.rs
src/scrapers/cisco/: scraper.rs
src/scrapers/cloudflare/: scraper.rs
src/scrapers/coinbase/: scraper.rs
src/scrapers/costar_group/: scraper.rs
src/scrapers/disney/: scraper.rs
src/scrapers/doordash/: scraper.rs
src/scrapers/experian/: scraper.rs
src/scrapers/github/: scraper.rs
src/scrapers/ibm/: scraper.rs
src/scrapers/meta/: scraper.rs
src/scrapers/netflix/: scraper.rs
src/scrapers/nike/: scraper.rs
src/scrapers/onepassword/: scraper.rs
src/scrapers/onepassword/scripts/: get_onepassword_jobs.js
src/scrapers/panasonic/: scraper.rs
src/scrapers/paypal/: scraper.rs
src/scrapers/reddit/: scraper.rs
src/scrapers/robinhood/: scraper.rs
src/scrapers/salesforce/: scraper.rs
src/scrapers/servicenow/: scraper.rs
src/scrapers/square/: scraper.rs
src/scrapers/stripe/: scraper.rs
src/scrapers/tarro/: scraper.rs
src/scrapers/tarro/scripts/: get_tarro_jobs.js
src/scrapers/toast/: scraper.rs
src/scrapers/uber/: scraper.rs
src/scrapers/weedmaps/: job_details.rs  scraper.rs
src/scrapers/weedmaps/scripts/: get_weedmaps_jobs.js
src/utils/: snapshots.rs  stringify_js.rs
