[package]
name = "job_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clipboard = "0.5.0"
colored = "2.1.0"
dialoguer = {version = "0.11.0", features = ["fuzzy-select"]}
dotenv = "0.15.0"
figlet-rs = "0.1.5"
headless_chrome = "1.0.15"
indicatif = "0.17.9"
reqwest = { version = "0.11", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.16.0"
tokio = { version = "1.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
uuid = { version = "1.11", features = ["serde"] } # Enable serde integration for UUID
webbrowser = "1.0.2"


