[package]
name = "jobshell"
version = "1.0.9"
edition = "2021"
authors = ["Mac fitton <macfittondev@gmail.com>"]
description = "A CLI tool for job searching and scraping job boards"
license = "MIT"
repository = "https://github.com/angelplusultra/job-shell"
readme = "README.md"
keywords = ["cli", "job-search", "automation"]
categories = ["command-line-utilities"]
default-run = "jobshell"

[[bin]]
name = "jobshell"
path = "src/main.rs"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
clipboard = "0.5.0"
colored = "2.1.0"
dialoguer = {version = "0.11.0", features = ["fuzzy-select"]}
directories = "5.0.1"
dotenv = "0.15.0"
figlet-rs = "0.1.5"
headless_chrome = "1.0.15"
indicatif = "0.17.9"
reqwest = { version = "0.11", features = ["json"]}
scraper = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
tabled = "0.16.0"
tokio = { version = "1.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
uuid = { version = "1.11", features = ["serde"] } # Enable serde integration for UUID
webbrowser = "1.0.2"


